--- a/app/composer.json
+++ b/app/composer.json
@@ -12,7 +12,9 @@
     "require": {
         "php": "^8.0",
         "ext-pdo": "*",
-        "ext-pdo_mysql": "*"
+        "ext-pdo_mysql": "*",
+        "robmorgan/phinx": "1.x-dev",
+        "symfony/yaml": "6.3.x-dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
