--- a/app/composer.json
+++ b/app/composer.json
@@ -14,10 +14,8 @@
         "ext-pdo": "*",
         "ext-pdo_mysql": "*",
         "robmorgan/phinx": "1.x-dev",
-        "symfony/yaml": "6.3.x-dev"
-    },
-    "require-dev": {
-        "phpunit/phpunit": "^9.5"
+        "symfony/yaml": "6.3.x-dev",
+        "guzzlehttp/guzzle": "^7.0"
     },
     "autoload": {
         "psr-4": {
@@ -26,5 +24,13 @@
     },
     "scripts": {
         "run-tests": "vendor/bin/phpunit"
+    },
+    "require-dev": {
+        "pestphp/pest": "2.x-dev"
+    },
+    "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     }
 }
